IOT device data got now saved in db + show in History page
+ Renamed WeatherStation to GreenhouseDevice
+ Change history stuff from int to float in sql
+ New sql table UserDevice
+ Updated scaffold.sh
+ Updated context and entities
+ MyDbContext now used correct scheme
+ Removed legacy DeviceLog
+ Refactor frontend folder
+ Added index / import
+ Added Trashbin Icon
+ Added ConfirmModal
