# server/Api.Rest/Controllers/GreenhouseDeviceController.cs
@@ -1,29 +1,31 @@
 using Application.Interfaces;
 using Application.Interfaces.Infrastructure.Websocket;
+using Application.Models.Dtos.MqttDtos.Respone;
 using Application.Models.Dtos.RestDtos;
-using Core.Domain.Entities;
 using Microsoft.AspNetCore.Mvc;
 
 namespace Api.Rest.Controllers;
 
 [ApiController]
-public class WeatherStationController(
-    IWeatherStationService weatherStationService,
+public class GreenhouseDeviceController(
+    IGreenhouseDeviceService greenhouseDeviceService,
     IConnectionManager connectionManager,
     ISecurityService securityService) : ControllerBase
 {
-    public const string GetLogsRoute = nameof(GetLogs);
+    public const string GetSensorDataRoute = nameof(GetSensorDataByDeviceId);
 
 
     public const string AdminChangesPreferencesRoute = nameof(AdminChangesPreferences);
 
     [HttpGet]
-    [Route(GetLogsRoute)]
-    public async Task<ActionResult<IEnumerable<Devicelog>>> GetLogs([FromHeader] string authorization)
+    [Route(GetSensorDataRoute)]
+    public async Task<ActionResult<IEnumerable<GetAllSensorHistoryByDeviceIdDto>>> GetSensorDataByDeviceId(
+        [FromQuery] Guid deviceId,
+        [FromHeader] string authorization)
     {
         var claims = securityService.VerifyJwtOrThrow(authorization);
-        var feed = weatherStationService.GetDeviceFeed(claims);
-        return Ok(feed);
+        var data = await greenhouseDeviceService.GetSensorHistoryByDeviceIdAndBroadcast(deviceId, claims);
+        return Ok(data);
     }
 
     [HttpPost]
@@ -32,20 +34,20 @@ public class WeatherStationController(
         [FromHeader] string authorization)
     {
         var claims = securityService.VerifyJwtOrThrow(authorization);
-        await weatherStationService.UpdateDeviceFeed(dto, claims);
+        await greenhouseDeviceService.UpdateDeviceFeed(dto, claims);
         return Ok();
     }
 
     public const string DeleteDataRoute = nameof(DeleteData);
+
     [HttpDelete]
     [Route(DeleteDataRoute)]
-    public async Task<ActionResult> DeleteData([FromHeader]string authorization)
+    public async Task<ActionResult> DeleteData([FromHeader] string authorization)
     {
         var jwt = securityService.VerifyJwtOrThrow(authorization);
 
-        await weatherStationService.DeleteDataAndBroadcast(jwt);
-        
+        await greenhouseDeviceService.DeleteDataAndBroadcast(jwt);
+
         return Ok();
     }
-    
 }
