# server/Application/Models/Dtos/BroadcastModels/ServerBroadcastsLiveDataToDashboard.cs
@@ -1,9 +1,9 @@
-using Core.Domain.Entities;
+using Application.Models.Dtos.MqttDtos.Respone;
 
 namespace Application.Models.Dtos.BroadcastModels;
 
 public class ServerBroadcastsLiveDataToDashboard : ApplicationBaseDto
 {
-    public List<Devicelog> Logs { get; set; }
+    public List<GetAllSensorHistoryByDeviceIdDto> Logs { get; set; }
     public override string eventType { get; set; } = nameof(ServerBroadcastsLiveDataToDashboard);
 }
