# server/Application/Models/StringConstants.cs
@@ -4,7 +4,8 @@ public static class StringConstants
 {
     public const string Dashboard = nameof(Dashboard);
     public const string Device = nameof(Device);
-
+    
+    public const string SensorData = nameof(SensorData);
+    
     public const string ChangePreferences = nameof(ChangePreferences);
-    public const string Log = nameof(Log);
 }
