# server/Infrastructure.MQTT/SubscriptionEventHandlers/DeviceLogEventHandler.cs
@@ -8,21 +8,21 @@ using HiveMQtt.MQTT5.Types;
 
 namespace Infrastructure.MQTT.SubscriptionEventHandlers;
 
-public class DeviceLogEventHandler(IWeatherStationService weatherStationService) : IMqttMessageHandler
+public class DeviceLogEventHandler(IGreenhouseDeviceService greenhouseDeviceService) : IMqttMessageHandler
 {
-    public string TopicFilter { get; } = StringConstants.Device + "/+/" + StringConstants.Log;
+    public string TopicFilter { get; } = StringConstants.Device + "/+/" + StringConstants.SensorData;
     public QualityOfService QoS { get; } = QualityOfService.AtLeastOnceDelivery;
 
     public void Handle(object? sender, OnMessageReceivedEventArgs args)
     {
-        var dto = JsonSerializer.Deserialize<DeviceLogDto>(args.PublishMessage.PayloadAsString,
+        var dto = JsonSerializer.Deserialize<DeviceSensorDataDto>(args.PublishMessage.PayloadAsString,
             new JsonSerializerOptions
             {
                 PropertyNameCaseInsensitive = true
-            }) ?? throw new Exception("Could not deserialize into " + nameof(DeviceLogDto) + " from " +
+            }) ?? throw new Exception("Could not deserialize into " + nameof(DeviceSensorDataDto) + " from " +
                                       args.PublishMessage.PayloadAsString);
         var context = new ValidationContext(dto);
         Validator.ValidateObject(dto, context);
-        weatherStationService.AddToDbAndBroadcast(dto);
+        greenhouseDeviceService.AddToDbAndBroadcast(dto);
     }
 }
